--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -5,3 +5,22 @@ mixin icon(name, className)
 
 mixin image(path, className)
   img(src=require(`images/${path}`) class=className)
+
+mixin percentage (percents)
+  svg(class="percentage" veiwBox = "0 0 100 100" preserveAspectRatio="none")
+    circle(cx="75" cy="75" r="67" class="circle circle-under")
+    circle(cx="75" cy="75" r="67" class="circle circle-above" style=`animation-delay: -${percents}s`)
+    linearGradient(id="my-cool-gradient" x2="1" y2="1")
+      stop(offset="0%" stop-color="#ad00ed")
+      stop(offset="100%" stop-color="#5500f2")
+
+mixin infograms(items)
+  ul.skills-section__infograms-list
+   each item in items
+     li.skills-section__infograms-item= item.name
+       svg(class="percentage" veiwBox = "0 0 100 100" preserveAspectRatio="none")
+         circle(cx="75" cy="75" r="67" class="circle circle-under")
+         circle(cx="75" cy="75" r="67" class="circle circle-above" style=`animation-delay: -${item.perc}s`)
+         linearGradient(id="my-cool-gradient" x2="1" y2="1")
+           stop(offset="0%" stop-color="#ad00ed")
+           stop(offset="100%" stop-color="#5500f2")
