--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -87,3 +87,10 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+.title{
+  font-weight:bold;
+  font-size:36px;
+  line-height: 1.66;
+  color:$text-color;
+
+}
